...

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/med_list_title"
                    android:textAppearance="?attr/textAppearanceHeadlineSmall"
                    app:layout_constraintEnd_toStartOf="@id/logoutButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/logoutButton"
                    style="?attr/materialButtonOutlinedStyle"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/dashboard_view_seniors_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addSeniorPatientButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/create_senior_title" />

...
